# simpletk

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup,py  setup.cfg
docs/: api_reference.md  examples.md  index.md
simpletk/: __init__.py  app.py  menu.py  utils.py
simpletk/containers/: __init__.py  grid.py  horizontal.py  pages.py  scrollable.py  scrollarea.py  table.py  tabs.py  vertical.py
simpletk/controls/: __init__.py  button.py  checkbox.py  dropdown.py  input.py  label.py  listbox.py  radiogroup.py  searchable_list.py  slider.py
