[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "simpletk"
version = "1.0.0"
description = "Простая библиотека для создания GUI на Python"
readme = "README.md"
authors = [
    {name = "viorelpuv", email = "-"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
keywords = ["gui", "tkinter", "simple", "easy", "russian"]
requires-python = ">=3.6"
dependencies = []

[project.urls]
Homepage = "https://github.com/yourusername/simpletk"
Documentation = "https://github.com/yourusername/simpletk/wiki"
Repository = "https://github.com/yourusername/simpletk"
"Bug Tracker" = "https://github.com/yourusername/simpletk/issues"

[tool.setuptools]
packages = ["simpletk", "simpletk.controls", "simpletk.containers"]

[tool.setuptools.package-data]
"simpletk" = ["py.typed"]
"simpletk.controls" = ["py.typed"]
"simpletk.containers" = ["py.typed"]
