[metadata]
license_file = LICENSE
description-file = README.md

[flake8]
max-line-length = 100
exclude = .git,__pycache__,docs,examples,tests,.venv

[mypy]
python_version = 3.9
ignore_missing_imports = True

[coverage:run]
source = simpletk
omit = */tests/*,*/examples/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError